correção de denuncias e partes pequenas

--- a/Desenvolvimento Front-End/src/ajuda.html
+++ b/Desenvolvimento Front-End/src/ajuda.html
@@ -143,16 +143,16 @@
                 <p class="w-200 mb-4">Você também pode entrar em contato através dos seguintes canais:</p>
                 <ul>
                     <li class="text-2xl mb-4">Email: <strong class=" hover:underline text-links">suporte@SAC.com</strong></li>
-                    <li class="text-2xl">WhatsApp: <strong class="hover:underline text-links">(11) 98888-8888</strong></li>
+                    <li class="text-2xl">WhatsApp: <strong class="hover:underline text-links">(21) 98633-5359</strong></li>
                 </ul>
             </section>
-            <section class="mt-16">
+            <!-- <section class="mt-16">
                 <h2 class="text-black text-4xl font-alfa mb-6">Nossas Redes Sociais</h2>
                 <ul>
                     <li>Youtube: <a class="font-bold hover:underline text-links" href="" target="_blank">youtube.com/SAC</a></li>
                     <li>Instagram: <a class="font-bold hover:underline text-links" href="" target="_blank">@SAC</a></li>
                 </ul>
-            </section>
+            </section> -->
         </div>
     </main>
 
