--- a/Desenvolvimento Front-End/src/cadastro-1.html
+++ b/Desenvolvimento Front-End/src/cadastro-1.html
@@ -93,9 +93,7 @@
         </div>
     </div>
 
-    <script src="javascript/cadastro-1.js">
-        
-    </script>
+    <script src="javascript/cadastro-1.js"></script>
 
     
     <!-- Modal de mensagem (inicialmente oculto) -->
