--- a/Desenvolvimento Front-End/src/denuncias.html
+++ b/Desenvolvimento Front-End/src/denuncias.html
@@ -205,7 +205,14 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
 
+<!-- Biblioteca do EmailJS -->
+<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+
+<!-- Seu script de menu -->
 <script src="javascript/menu.js"></script>
+
+<!-- Seu script de denúncias -->
+<script src="javascript/denuncias.js"></script>
 
 </html>
 
