Detalhes do projeto.

--- a/Desenvolvimento Front-End/src/login.html
+++ b/Desenvolvimento Front-End/src/login.html
@@ -38,7 +38,7 @@
                         <div class="relative w-full mb-5">
                           <input 
                             class="bg-amber-50 indent-1 p-1 rounded-md w-full pr-10"
-                            type="password" id="senha" name="senha" placeholder="Senha" required minlength="6" autocomplete="new-password"
+                            type="password" id="senha_hash" name="senha" placeholder="Senha" required minlength="6" autocomplete="new-password"
                             aria-describedby="senhaHelp">
                             <button 
                             type="button"
