--- a/Desenvolvimento Front-End/src/criandoPost.html
+++ b/Desenvolvimento Front-End/src/criandoPost.html
@@ -167,7 +167,7 @@
 
                         <div class="mb-4">
                             <label for="cep" class="block text-sm font-medium">CEP:</label>
-                            <input type="text" id="cep" class="w-full px-3 py-2 border rounded-lg" placeholder="Digite o CEP:" onblur="buscarCEP()" maxlength="9" required>
+                            <input type="text" id="cep" class="w-full px-3 py-2 border rounded-lg" placeholder="26120-340" onblur="buscarCEP()" maxlength="9" required>
                         </div>
  
                         <div class="mb-4">
@@ -212,7 +212,7 @@
 
                         <div class="mb-4">
                             <label for="casa" class="block text-sm font-medium">Logradouro:</label>
-                            <input type="text" id="casa" class="w-full px-3 py-2 border rounded-lg" placeholder="Ex: Rua das Flores, 123" required>
+                            <input type="text" id="casa" class="w-full px-3 py-2 border rounded-lg" placeholder="Ex: Rua das Flores" required>
                         </div>
 
                         <div class="mb-4">
