--- a/Desenvolvimento Front-End/src/postagens.html
+++ b/Desenvolvimento Front-End/src/postagens.html
@@ -147,7 +147,7 @@
             <form class="text-minitexto flex flex-row gap-5 items-center justify-center px-30 py-2" id="filtroForm">
                 <label for="categoria">Categoria:</label>
                 <select class="rounded-md border-1 border-minitexto indent-0.5 " id="categoria" name="categoria">
-                    <option value="todas">Todas</option>
+                    <option value="todas" onclick="filterProduct('todas')">Todas</option>
                     <option value="alimentos">Alimentos</option>
                     <option value="roupas">Roupas</option> 
                 </select>
