Correção de acabamento

--- a/Desenvolvimento Front-End/src/criandoPost.html
+++ b/Desenvolvimento Front-End/src/criandoPost.html
@@ -32,7 +32,7 @@
         <div class="flex items-center gap-15 py-2">
 
             <a href="postagens.html" class=" hover:text-gray-800">Postagens</a>
-            <a href="duvidas.html" class=" hover:text-gray-800">Duvidas</a>
+            <a href="duvidas.html" class=" hover:text-gray-800">Dúvidas</a>
             <span class="separator">|</span>
             <a href="index.html" class="text-destaque font-alfa text-4xl">SAC</a>
             <span class="separator">|</span>
