--- a/Desenvolvimento Front-End/src/perfil.html
+++ b/Desenvolvimento Front-End/src/perfil.html
@@ -15,7 +15,7 @@
     <nav class="bg-amber-50 text-black flex justify-center items-center" id="menu-antigo">
         <div class="flex items-center gap-15 px-6 py-2">
             <a href="postagens.html" class=" hover:text-gray-800">Postagens</a>
-            <a href="duvidas.html" class=" hover:text-gray-800">Duvidas</a>
+            <a href="duvidas.html" class=" hover:text-gray-800">Dúvidas</a>
             <span class="separator">|</span>
             <a href="index.html" class="text-destaque font-alfa text-4xl">SAC</a>
             <span class="separator">|</span>
@@ -28,7 +28,7 @@
         <div class="flex items-center gap-15 py-2">
 
             <a href="postagens.html" class=" hover:text-gray-800">Postagens</a>
-            <a href="duvidas.html" class=" hover:text-gray-800">Duvidas</a>
+            <a href="duvidas.html" class=" hover:text-gray-800">Dúvidas</a>
             <span class="separator">|</span>
             <a href="index.html" class="text-destaque font-alfa text-4xl">SAC</a>
             <span class="separator">|</span>
