--- a/Desenvolvimento Front-End/src/postagens.html
+++ b/Desenvolvimento Front-End/src/postagens.html
@@ -19,7 +19,7 @@
     <nav class="bg-amber-50 text-black flex justify-center items-center" id="menu-antigo">
         <div class="flex items-center gap-15 px-6 py-2">
             <a href="postagens.html" class=" hover:text-gray-800">Postagens</a>
-            <a href="duvidas.html" class=" hover:text-gray-800">Duvidas</a>
+            <a href="duvidas.html" class=" hover:text-gray-800">Dúvidas</a>
             <span class="separator">|</span>
             <a href="index.html" class="text-destaque font-alfa text-4xl">SAC</a>
             <span class="separator">|</span>
@@ -32,7 +32,7 @@
         <div class="flex items-center gap-15 py-2">
 
             <a href="postagens.html" class=" hover:text-gray-800">Postagens</a>
-            <a href="duvidas.html" class=" hover:text-gray-800">Duvidas</a>
+            <a href="duvidas.html" class=" hover:text-gray-800">Dúvidas</a>
             <span class="separator">|</span>
             <a href="index.html" class="text-destaque font-alfa text-4xl">SAC</a>
             <span class="separator">|</span>
@@ -165,9 +165,33 @@
 
                 <label for="localizacao">Localização:</label>
                 <select class="rounded-md border-1 border-minitexto indent-0.5" id="localizacao" name="localizacao">
-                    <option value="RJ">RJ</option>
-                    <option value="SP">SP</option>
+                    <option value="RJ">AC</option>
+                    <option value="SP">AL</option>
+                    <option value="MG">AP</option>
+                    <option value="MG">AM</option>
+                    <option value="MG">BA</option>
+                    <option value="MG">CE</option>
+                    <option value="MG">DF</option>
+                    <option value="MG">ES</option>
+                    <option value="MG">GO</option>
+                    <option value="MG">MA</option>
+                    <option value="MG">MT</option>
+                    <option value="MG">MS</option>
                     <option value="MG">MG</option>
+                    <option value="MG">PA</option>
+                    <option value="MG">PB</option>
+                    <option value="MG">PR</option>
+                    <option value="MG">PE</option>
+                    <option value="MG">PI</option>
+                    <option value="MG">RJ</option>
+                    <option value="MG">RN</option>
+                    <option value="MG">RS</option>
+                    <option value="MG">RO</option>
+                    <option value="MG">RR</option>
+                    <option value="MG">SC</option>
+                    <option value="MG">SP</option>
+                    <option value="MG">SE</option>
+                    <option value="MG">TO</option>
                 </select>
 
                 <label for="urgencia">Urgência:</label>
