--- a/Desenvolvimento Front-End/src/denuncias.html
+++ b/Desenvolvimento Front-End/src/denuncias.html
@@ -4,7 +4,7 @@
     <meta charset=”UTF-8”>
     <meta name=”viewport” content=”width=device-width, initial-scale=1.0”>
     <meta http-equiv=”X-UA-Compatible” content=”ie=edge”>
-    <title>Denuncias</title>
+    <title>Denúncias</title>
     <link href="./output.css" rel="stylesheet">
     <link href="./input.css" rel="stylesheet">
     <link rel="stylesheet" href="menu.css">
@@ -19,7 +19,7 @@
     <nav class="bg-amber-50 text-black flex justify-center items-center" id="menu-antigo">
         <div class="flex items-center gap-15 px-6 py-2">
             <a href="postagens.html" class=" hover:text-gray-800">Postagens</a>
-            <a href="duvidas.html" class=" hover:text-gray-800">Duvidas</a>
+            <a href="duvidas.html" class=" hover:text-gray-800">Dúvidas</a>
             <span class="separator">|</span>
             <a href="index.html" class="text-destaque font-alfa text-4xl">SAC</a>
             <span class="separator">|</span>
@@ -32,7 +32,7 @@
         <div class="flex items-center gap-15 py-2">
 
             <a href="postagens.html" class=" hover:text-gray-800">Postagens</a>
-            <a href="duvidas.html" class=" hover:text-gray-800">Duvidas</a>
+            <a href="duvidas.html" class=" hover:text-gray-800">Dúvidas</a>
             <span class="separator">|</span>
             <a href="index.html" class="text-destaque font-alfa text-4xl">SAC</a>
             <span class="separator">|</span>
@@ -144,21 +144,20 @@
 
             <form class="flex flex-col gap-2 w-full" action="" method="post">
 
-                <label for="denuncia" class="text-xl">O que deseja Denunciar?</label>
+                <label for="denuncia" class="text-xl">O que deseja denunciar?</label>
                 <select class="rounded-md border-2 border-minitexto text-minitexto p-1 text-md w-fit pr-20 mb-10 text-lg" 
                 id="denuncia" 
                 name="denuncia">
-                    <option value="comentario">Comentario</option>
-                    <option value="perfil">Perfil</option>
+                    <option value="comentario">Comentário</option>
                     <option value="postagem">Postagem</option>
                 </select>
 
 
-                <label class="text-xl" for="idDenunciar">Digite o ID do que deseja denúnciar</label> 
+                <label class="text-xl" for="idDenunciar">Digite o ID do que deseja denunciar</label> 
                 <input class="border-2 border-minitexto  rounded-md w-140 indent-1 p-1 mb-10 text-lg" type="text" name="idDenunciar" id="idDenunciar" placeholder="Ex: #234243522">
 
 
-                <label class="text-xl" for="idDenunciar"> Descreva o motivo da sua denúncia</label>
+                <label class="text-xl" for="idDenunciar">Descreva o motivo da sua denúncia</label>
                 <textarea id="idDenunciar" name="idDenunciar" class="border-2 border-minitexto rounded-md indent-1 p-1 mb-10 w-full h-40 resize-y text-lg"placeholder="Escreva aqui sua descrição..."></textarea>
 
                 <button id="enviar" class="px-5 py-3 bg-red-600 text-amber-50 rounded-xl w-fit">Enviar</button>
