--- a/Desenvolvimento Front-End/src/config-1.html
+++ b/Desenvolvimento Front-End/src/config-1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SAC - Página Inicial</title>
+    <title>Configurações</title>
     <link href="./output.css" rel="stylesheet">
     <link href="./input.css" rel="stylesheet">
     <link rel="stylesheet" href="menu.css">
@@ -148,7 +148,7 @@
         <section class="pt-10 pr-10 w-full">
             <h1 class="font-bold text-xl mb-1">Atenção!!!</h1>
 
-            <p class="w-150">Seus dados de conta, exceto FOCO DA CONTA e SENHA, só podem ser alterado uma única vez. Caso seja necessário outras alterações é preciso contatar o suporte.</p>
+            <p class="w-150">Seus dados de conta só podem ser alterado uma única vez, <strong>com exceção da foto de perfil e senha</strong>. Caso seja necessário outras alterações é preciso contatar o suporte.</p>
 
             <hr class="my-8 border-1">
 
