--- a/Desenvolvimento Front-End/src/config-2.html
+++ b/Desenvolvimento Front-End/src/config-2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SAC - Página Inicial</title>
+    <title>Configurações</title>
     <link href="./output.css" rel="stylesheet">
     <link href="./input.css" rel="stylesheet">
     <link rel="stylesheet" href="menu.css">
@@ -212,7 +212,7 @@
                         type="text"
                         id="instagram"
                         name="instagram"
-                        placeholder="naruto04@gmail.com"
+                        placeholder="@naruto_04"
                         class="flex-1 border-2 rounded-md indent-2 p-1 border-minitexto placeholder:text-gray-950"
                         />
                     </div>
@@ -223,7 +223,7 @@
                         type="text"
                         id="facebook"
                         name="facebook"
-                        placeholder="(21) 97229-9774"
+                        placeholder="Naruto Uzumaki"
                         class="flex-1 border-2 rounded-md indent-2 p-1 border-minitexto placeholder:text-gray-950"
                         />
                     </div>
