--- a/Desenvolvimento Front-End/src/duvidas.html
+++ b/Desenvolvimento Front-End/src/duvidas.html
@@ -4,7 +4,7 @@
     <meta charset=”UTF-8”>
     <meta name=”viewport” content=”width=device-width, initial-scale=1.0”>
     <meta http-equiv=”X-UA-Compatible” content=”ie=edge”>
-    <title>duvidas</title>
+    <title>Dúvidas</title>
     <link href="./output.css" rel="stylesheet">
     <link href="./input.css" rel="stylesheet">
     <link rel="stylesheet" href="menu.css">
