--- a/Desenvolvimento Front-End/src/criandoPost.html
+++ b/Desenvolvimento Front-End/src/criandoPost.html
@@ -151,9 +151,10 @@
                 <div class="my-8">
                     <label for="categoria" class="block text-xl mb-1">Categoria:</label>
                     <select id="categoria" class="w-full px-3 py-2 border rounded-lg" required>
-                        <option value="Alimentos">Alimentos</option>
-                        <option value="Roupas">Roupas</option>
-                        <option value="Servicos">Serviços</option>
+                        <option value="alimentos">Alimentos</option>
+                        <option value="roupas">Roupas</option>
+                        <option value="servicos">Serviços</option>
+                        <option value="eletronicos">Eletrônicos</option>
                     </select>
                 </div>
             
