--- a/Desenvolvimento Front-End/src/postagens.html
+++ b/Desenvolvimento Front-End/src/postagens.html
@@ -151,6 +151,7 @@
                     <option value="alimentos">Alimentos</option>
                     <option value="roupas">Roupas</option> 
                     <option value="servicos">Serviços</option> 
+                    <option value="eletronicos">Eletrônicos</option>
                 </select>
 
                 <label for="data">Data:</label>
