--- a/Desenvolvimento Front-End/src/perfil.html
+++ b/Desenvolvimento Front-End/src/perfil.html
@@ -163,8 +163,9 @@
 
         <div>
             <label for="editPhoto" class="block text-sm font-medium">Foto de Perfil</label>
-            <input type="file" id="editPhoto" accept="image/*" class="w-full px-3 py-2 border rounded-lg">
+            <input type="file" id="fileInput" accept="image/*" class="w-full px-3 py-2 border rounded-lg">
         </div>
+
 
         <div class="flex justify-end">
             <button type="button" id="saveProfileBtn" class="px-4 py-2 bg-destaque text-white rounded-lg hover:bg-destaque-dark">
