--- a/Desenvolvimento Front-End/src/config-2.html
+++ b/Desenvolvimento Front-End/src/config-2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@
 
     <script src="https://kit.fontawesome.com/8eab5b8649.js" crossorigin="anonymous"></script>
 
-    <!-- npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --watch -->
+ 
 
 </head>
 <body class="bg-amber-50 font-alexandria">
@@ -45,10 +45,10 @@
                                 <img id="profileImage" class="object-cover w-full h-full" src="../img/defaultPhoto.png" alt="Foto de Perfil" width="10" height="10">
 
                             </div>
-                                <!-- Foto de Perfil  -->
+
                             <div class="flex flex-col">
                                 <span id=""></span>
-                                    <!-- puxar do banco  -->
+
                             </div>
                         </div>
                     </a>
@@ -62,10 +62,10 @@
                                     <img id="profileImage" class="object-cover w-full h-full" src="../img/defaultPhoto.png" alt="Foto de Perfil" width="10" height="10">
 
                                 </div>
-                                    <!-- Foto de Perfil  -->
+
                                 <div class="flex flex-col">
                                     <span id="profileName"></span>
-                                        <!-- puxar do banco  -->
+
                                 </div>
                             </div>
                         </a>
@@ -287,4 +287,4 @@
     <script src="javascript/menu.js"></script>
     
 </body>
-</html>
+</html> -->
