--- a/Desenvolvimento Front-End/src/index.html
+++ b/Desenvolvimento Front-End/src/index.html
@@ -180,12 +180,12 @@
         <!-- As postagens serão carregadas dinamicamente pelo JavaScript -->
 
 
+        
 
-
-        <aside class="w-vw h-dvh bg-fundo2 flex items-center justify-center gap-10 px-30 flex-col rounded-4xl rounded-b-none">
-                    <p class="text-[32px]  w-100 text-center blur-none duration-1000">Veja mais postagens e publique se cadastrando</p>
-                    <p class="text-2xl text-center py-5 px-5 bg-[#24792a] duration-500 text-gray-200 rounded-xl hover:bg-[#1bb125] hover:text-amber-50 hover:scale-175 "><a  href="cadastro-1.html">Cadastre-se</a></p>
-
+        <!-- puxar do banco de dados as postagens acima -->
+        <aside class="w-vw h-dvh bg-fundo2 flex items-center justify-center gap-10 px-30 flex-col rounded-4xl rounded-b-none" id="botaoCadastroSection">
+            <p class="text-[32px]  w-100 text-center blur-none duration-1000">Veja mais postagens e publique se cadastrando</p>
+            <p class="text-2xl text-center py-5 px-5 bg-[#24792a] duration-500 text-gray-200 rounded-xl hover:bg-[#1bb125] hover:text-amber-50 hover:scale-175 "><a  href="cadastro-1.html">Cadastre-se</a></p>
         </aside>
     </main>  
 
