--- a/Desenvolvimento Front-End/src/ajuda.html
+++ b/Desenvolvimento Front-End/src/ajuda.html
@@ -8,6 +8,7 @@
     <link href="./output.css" rel="stylesheet">
     <link href="./input.css" rel="stylesheet">
     <link rel="stylesheet" href="menu.css">
+    <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
 
     <script src="https://kit.fontawesome.com/8eab5b8649.js" crossorigin="anonymous"></script>
     
@@ -142,7 +143,7 @@
                 <h2 class="text-black text-4xl font-alfa mb-6">Canais de suporte</h2>
                 <p class="w-200 mb-4">Você também pode entrar em contato através dos seguintes canais:</p>
                 <ul>
-                    <li class="text-2xl mb-4">Email: <strong class=" hover:underline text-links">suporte@SAC.com</strong></li>
+                    <li class="text-2xl mb-4">Email: <strong class=" hover:underline text-links">sistemadeapoiocomunitario@gmail.com</strong></li>
                     <li class="text-2xl">WhatsApp: <strong class="hover:underline text-links">(21) 98633-5359</strong></li>
                 </ul>
             </section>
