--- a/Desenvolvimento Front-End/src/cadastro-1.html
+++ b/Desenvolvimento Front-End/src/cadastro-1.html
@@ -7,6 +7,7 @@
     <title>Cadastro</title>
     <link href="./output.css" rel="stylesheet">
     <link href="./input.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
 
     <!-- npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --watch -->
 
