--- a/Desenvolvimento Front-End/src/cadastro-2.html
+++ b/Desenvolvimento Front-End/src/cadastro-2.html
@@ -11,6 +11,7 @@
     <!-- Links para arquivos CSS -->
     <link href="./output.css" rel="stylesheet"> <!-- Arquivo CSS principal -->
     <link href="./input.css" rel="stylesheet"> <!-- Arquivo CSS adicional -->
+    <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
     
     <!-- Kit de ícones Font Awesome -->
     <script src="https://kit.fontawesome.com/8eab5b8649.js" crossorigin="anonymous"></script>
