--- a/Desenvolvimento Front-End/src/index.html
+++ b/Desenvolvimento Front-End/src/index.html
@@ -8,6 +8,7 @@
     <link href="./input.css" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="menu.css">
+    <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
 
     <script src="https://kit.fontawesome.com/8eab5b8649.js" crossorigin="anonymous"></script>
     
