--- a/Desenvolvimento Front-End/src/login.html
+++ b/Desenvolvimento Front-End/src/login.html
@@ -7,6 +7,7 @@
     <title>Login</title>
     <link href="./output.css" rel="stylesheet">
     <link href="./input.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
     <meta name="fido2-page-script" content="no-script">
     
     <script src="https://kit.fontawesome.com/8eab5b8649.js" crossorigin="anonymous"></script>
