--- a/Desenvolvimento Front-End/src/perfil.html
+++ b/Desenvolvimento Front-End/src/perfil.html
@@ -7,6 +7,7 @@
     <link href="./output.css" rel="stylesheet">
     <link href="./input.css" rel="stylesheet">
     <link rel="stylesheet" href="menu.css">
+    <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
 
     <script src="https://kit.fontawesome.com/8eab5b8649.js" crossorigin="anonymous"></script>
 </head>
