--- a/Desenvolvimento Front-End/src/reset-senha.html
+++ b/Desenvolvimento Front-End/src/reset-senha.html
@@ -6,6 +6,7 @@
     <title>Redefinir Senha</title>
     <link href="./output.css" rel="stylesheet">
     <link href="./input.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
 </head>
 <body class="bg-amber-50 font-alexandria flex items-center justify-center min-h-screen">
     <div class="w-full max-w-md bg-white p-8 rounded-lg shadow-lg">
