--- a/Desenvolvimento Front-End/src/config-1.html
+++ b/Desenvolvimento Front-End/src/config-1.html
@@ -147,9 +147,9 @@
         </section>
 
         <section class="pt-10 pr-10 w-full">
-            <h1 class="font-bold text-xl mb-1">Atenção!!!</h1>
+            <!-- <h1 class="font-bold text-xl mb-1">Atenção!!!</h1> -->
 
-            <p class="w-150">Seus dados de conta só podem ser alterado uma única vez, <strong>com exceção da foto de perfil e senha</strong>. Caso seja necessário outras alterações é preciso contatar o suporte.</p>
+            <!-- <p class="w-150">Seus dados de conta só podem ser alterado uma única vez, <strong>com exceção da foto de perfil e senha</strong>. Caso seja necessário outras alterações é preciso contatar o suporte.</p> -->
 
             <hr class="my-8 border-1">
 
