--- a/Desenvolvimento Front-End/src/login.html
+++ b/Desenvolvimento Front-End/src/login.html
@@ -64,7 +64,7 @@
     </div>
 
     <!-- Modal de Recuperação de Senha -->
-    <div id="forgotPasswordModal" class="hidden fixed inset-0 z-[9999] grid place-items-center p-4">
+    <!-- <div id="forgotPasswordModal" class="hidden fixed inset-0 z-[9999] grid place-items-center p-4">
         <div class="absolute inset-0 bg-black opacity-50"></div>
         <div class="relative w-full max-w-md">
             <div class="bg-white p-6 rounded-lg shadow-xl">
@@ -80,7 +80,7 @@
                 </form>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <script src="./javascript/login-1.js"></script>
 
