--- a/Desenvolvimento Front-End/src/index.html
+++ b/Desenvolvimento Front-End/src/index.html
@@ -157,7 +157,7 @@
         
 
         <section>
-            <h1 class="text-center text-4xl mt-15 mb-[-50px]publicadoB">Postagens mais importantes</h1>
+            <h1 class="text-center text-4xl mt-15 mb-[-50px]publicadoB">Postagens Recentes</h1>
 
             <div class="w-vh h-dvh flex gap-5 items-center px-30 justify-center publiqueB" id="postsContainer">
 
