--- a/Desenvolvimento Front-End/src/postagens.html
+++ b/Desenvolvimento Front-End/src/postagens.html
@@ -170,18 +170,18 @@
                     <!-- Estados serão populados automaticamente pelo JavaScript -->
                 </select>
 
-                <label for="urgencia">Urgência:</label>
+                <!-- <label for="urgencia">Urgência:</label>
                 <select class="rounded-md border-1 border-minitexto indent-0.5" id="urgencia" name="urgencia">
                     <option value="todas">Todas</option>
                     <option value="alta">Alta</option>
                     <option value="media">Média</option>
                     <option value="baixa">Baixa</option>
-                </select>
+                </select> -->
 
                 <button class="px-4 py-1.5 bg-fundo2 text-black rounded-lg ml-2 hover:bg-destaque hover:text-amber-50 duration-250" type="submit">Filtrar</button>
                 
                 <!-- Botão Limpar Filtros -->
-                <button class="px-4 py-1.5 bg-gray-200 text-black rounded-lg hover:bg-gray-300 duration-250" type="button" id="limparFiltros">Limpar Filtros</button>
+                <button class="px-4 py-2 bg-gray-200 text-black rounded-lg hover:bg-gray-300 duration-250" type="button" id="limparFiltros">Resetar</button>
             </form>
 
 
